# mobility-map-lab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/processed/: baseline_bottlenecks.csv  baseline_bottlenecks.parquet  edges.parquet  graph.gpickle  graph.graphml  nodes.parquet  results_baseline.parquet  results_scenarios.parquet  scenario_details.parquet
docs/: ARCHITECTURE.md
scripts/: build_graph.py  run_baseline.py  run_scenarios.py  streamlit_app.py
src/sxm_mobility/: __init__.py  config.py
src/sxm_mobility/api/: app.py
src/sxm_mobility/assignment/: bpr.py  metrics.py  msa.py
src/sxm_mobility/demand/: od_generation.py
src/sxm_mobility/io/: osm_ingest.py
src/sxm_mobility/network/: attributes.py  build_graph.py  simplify.py
src/sxm_mobility/scenarios/: catalog.py  evaluator.py  runner.py
src/sxm_mobility/viz/: maps.py
tests/: test_bpr.py  test_metrics.py
