[project]
name = "mobility-graph-lab"
version = "0.1.0"
description = "Graph-based mobility analytics sandbox for Sint Maarten (NetworkX + OSMnx + scenario testing)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "FlintIO" }]

dependencies = [
  "networkx>=3.3",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "loguru>=0.7.2",
  "rich>=13.7.1",
  "duckdb>=1.0.0",
  "pyarrow>=16.0.0",
  "streamlit-folium>=0.26.1",
  "folium>=0.20.0",
  "plotly>=6.5.2",
  "shapely>=2.1.2",
]

[project.optional-dependencies]
# Geospatial ingestion + OSM
geo = [
  "osmnx>=2.0.0",
  "geopandas>=1.0.1",
  "shapely>=2.0.5",
  "pyproj>=3.6.1",
  "lxml== 6.0.2",
]

# File formats + parquet
io = [
  "pyarrow>=16.1.0",
]

# Visualizations
viz = [
  "plotly>=5.23.0",
  "folium>=0.17.0",
]

# Dashboard
dashboard = [
  "streamlit>=1.37.0",
]

# API
api = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
]

# Background jobs for heavy scenario runs
jobs = [
  "celery>=5.4.0",
  "redis>=5.0.8",
]

# Database connectivity (Postgres/PostGIS)
db = [
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
]

# Dev tooling
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
  "black>=24.8.0",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sxm_mobility"]

[tool.hatch.build.targets.sdist]
include = ["src/sxm_mobility", "README.md", "pyproject.toml"]

[browser]
gatherUsageStats = false
